--- a/.github/workflows/CWRT-ALL.yml
+++ b/.github/workflows/CWRT-ALL.yml
@@ -20,7 +20,7 @@ on:
         type: boolean
 
 env:
-  GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+  GITHUB_TOKEN: ${{secrets.AUTH_TOKEN}}
 
 #CI权限
 permissions: write-all
@@ -33,7 +33,7 @@ jobs:
       - name: Delete old Releases and Workflows
         uses: ophub/delete-releases-workflows@main
         with:
-          gh_token: ${{secrets.GITHUB_TOKEN}}
+          gh_token: ${{secrets.AUTH_TOKEN}}
           delete_releases: true
           releases_keep_latest: 0
           delete_tags: true
