--- a/.github/workflows/Cache-Clean.yml
+++ b/.github/workflows/Cache-Clean.yml
@@ -8,7 +8,7 @@ on:
 permissions: write-all
 
 env:
-  GITHUB_TOKEN: ${{secrets.AUTH_TOKEN}}
+  GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
 jobs:
   cleanup:
