--- a/.github/workflows/CWRT-ALL.yml
+++ b/.github/workflows/CWRT-ALL.yml
@@ -13,11 +13,14 @@ on:
         description: '手动调整插件包，多个请用\n符号隔开。'
         required: false
         type: string
+      ssh:
+        description: 'SSH connection to Actions'
+        required: false
+        default: 'false'
       TEST:
         description: '仅输出配置文件，不编译固件。'
         default: 'false'
         required: false
-        type: boolean
 
 env:
   GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
@@ -82,3 +85,4 @@ jobs:
       WRT_PACKAGE: ${{inputs.PACKAGE}}
       #仅输出配置文件
       WRT_TEST: ${{inputs.TEST}}
+      WRT_SSH: ${{inputs.ssh}}
